task 2. start markup

--- a/index.html
+++ b/index.html
@@ -1,12 +1,82 @@
 <!DOCTYPE html>
 <html lang="ru">
-  <head>
-    <meta charset="utf-8">
-    <title>HTML Academy: Седона</title>
-  </head>
-  <body>
+<head>
+  <meta charset="utf-8">
+  <title>Добро пожаловать в Седону!</title>
+</head>
+<body>
+<header>
+  <nav>
+    <a class="main-header-logo">
+      <img src="img/logo.png" alt="Логотип сайта" width="138" height="70">
+    </a>
+    <ul class="site-navigation">
+      <li><a href="info.html">Информация</a></li>
+      <li><a href="photos.html">Фото и видео</a></li>
+      <li><a href="map.html">Карта штата</a></li>
+      <li><a href="hotels.html">Гостиницы</a></li>
+    </ul>
+  </nav>
+</header>
 
-    <p>Репозиторий создан для обучения на профессиональном онлайн‑курсе «<a href="https://htmlacademy.ru/intensive/htmlcss">HTML и CSS, уровень 1</a>».</p>
+<main>
+  <section class="about-sedona">
+    <h1 class="welcome-to-sedona">Добро пожаловать в Седону!</h1>
+    <div class="welcome-image"></div>
+    <p>
+      Седона — небольшой городок в Аризоне, заслуживающий большего! 
+    </p>
+    <p>
+      Рассмотрим 5 причин, по которым Седона круче, чем гранд каньон!
+    </p>
+  </section>
 
-  </body>
+  <section class="find-sedona-hotels">
+    <h2>Заинтересовались?</h2>
+    <p>
+      Укажите предполагаемые даты поездки, <br>
+      и мы покажем вам лучшие предложения гостиниц в Cедоне
+    </p>
+    <div class="button-hotels-search">
+      <p>Поиск гостиницы в Седоне</p>
+    </div>
+    <div class="search-form">
+      <p class="search-form-item">
+        Дата заезда: <span class="calendar"></span>
+      </p>
+      <p class="search-form-item">
+        Дата выезда: <span class="calendar"></span>
+      </p>
+      <p class="search-form-item">
+        Взрослые: <span class="counter"></span>
+      </p>
+      <p class="search-form-item">
+        Дети: <span class="counter"></span>
+      </p>
+      <div class="button-search">Найти</div>
+    </div>
+  </section>
+</main>
+
+<footer>
+  <p>
+    #VisitSedona <br>
+    ТЕЛ: +7(495) 666-02-66
+  </p>
+  <ul>
+    <li>
+      <a href="#">Twitter</a>
+    </li>
+    <li>
+      <a href="#">Facebook</a>
+    </li>
+    <li>
+      <a href="#">YouTube</a>
+    </li>
+  </ul>
+  <p>
+    Website by <a href="https://htmlacademy.ru"><img src="img/htmlAcademy_logo.png" alt="Логотип htmlAcademy" width="115" height="41"></a>
+  </p>
+</footer>
+</body>
 </html>
