add svg files, add additional markup

--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
       <img src="img/logo.png" alt="Логотип сайта" width="138" height="70">
     </a>
     <ul class="site-navigation">
-      <li><a href="info.html">Информация</a></li>
-      <li><a href="photos.html">Фото и видео</a></li>
-      <li><a href="map.html">Карта штата</a></li>
+      <li><a href="blanc.html">Информация</a></li>
+      <li><a href="blanc.html">Фото и видео</a></li>
+      <li><a href="blanc.html">Карта штата</a></li>
       <li><a href="hotels.html">Гостиницы</a></li>
     </ul>
   </nav>
@@ -26,9 +26,79 @@
     <p>
       Седона — небольшой городок в Аризоне, заслуживающий большего! 
     </p>
-    <p>
+    <p class="text-content">
       Рассмотрим 5 причин, по которым Седона круче, чем гранд каньон!
     </p>
+  </section>
+
+  <section>
+    <h2>Причины полюбить Седону</h2>
+    <ul class="reasons">
+      <li class="reasons-item main-reason">
+        <h3 class="reasons-item-header">
+          Настоящий <br>
+          городок</h3>
+        <p class="reason-number">— №1 —</p>
+        <p class="text-content">
+          Седона - не аттракцион для туристов, там течёт своя жизнь
+        </p>
+        <img src="img/photo_1.jpg" alt="" width="800" height="256">
+      </li>
+
+      <li>
+
+      </li>
+
+      <li class="reasons-item main-reason">
+        <img src="img/photo_2.jpg" alt="" width="800" height="256">
+        <h3 class="reasons-item-header">
+          Там есть <br>
+          Мост дьявола
+        </h3>
+        <p class="reason-number">— №2 —</p>
+        <p class="text-content">
+          Да, по нему можно пройти! Если конечно
+          вы осмелитесь
+        </p>
+
+      </li>
+
+      <li class="reasons-item">
+        <h3 class="reasons-item-header">
+          Небольшая <br>
+          площадь
+        </h3>
+        <p class="reason-number">— №3 —</p>
+        <p class="text-content">
+          Все достопримечательности
+          находятся очень близко
+        </p>
+      </li>
+
+      <li class="reasons-item">
+        <h3 class="reasons-item-header">
+          Красивая <br>
+          дорога
+        </h3>
+        <p class="reason-number">— №4 —</p>
+        <p class="text-content">
+          Ехать в седону из лас-вегаса совсем
+          не скучно!
+        </p>
+      </li>
+
+      <li class="reasons-item">
+        <h3 class="reasons-item-header">
+          Мало <br>
+          туристов
+        </h3>
+        <p class="reason-number">— №5 —</p>
+        <p class="text-content">
+          Большинство едет в гранд каньон
+          и толпится там
+        </p>
+      </li>
+    </ul>
   </section>
 
   <section class="find-sedona-hotels">
@@ -56,6 +126,9 @@
       <div class="button-search">Найти</div>
     </div>
   </section>
+
+  <div class="map"></div>
+
 </main>
 
 <footer>
