--- a/hotels.html
+++ b/hotels.html
@@ -11,9 +11,9 @@
       <img src="img/logo.png" alt="Логотип сайта" width="138" height="70">
     </a>
     <ul class="site-navigation">
-      <li><a href="info.html">Информация</a></li>
-      <li><a href="photos.html">Фото и видео</a></li>
-      <li><a href="map.html">Карта штата</a></li>
+      <li><a href="blanc.html">Информация</a></li>
+      <li><a href="blanc.html">Фото и видео</a></li>
+      <li><a href="blanc.html">Карта штата</a></li>
       <li><a href="hotels.html">Гостиницы</a></li>
     </ul>
   </nav>
@@ -21,6 +21,44 @@
 
 <main>
   <h1>Выбрать подходящий отель в Седоне</h1>
+
+  <section class="search-form">
+    <div>
+      <h3>Инфраструктура:</h3>
+      <ul>
+        <li>Бассейн</li>
+        <li>Парковка</li>
+        <li>Wi-fi</li>
+      </ul>
+    </div>
+
+    <div>
+      <h3>Тип жилья:</h3>
+      <ul>
+        <li>Гостиница</li>
+        <li>Мотель</li>
+        <li>Апартаменты</li>
+      </ul>
+    </div>
+
+    <div>
+      <h3>Стоимость в сутки (Р):</h3>
+    </div>
+
+    <!--"Найдено: 3"-->
+
+    <div class="sort">
+      <h3>Сортировка:</h3>
+      <ul>
+        <li>По цене</li>
+        <li>По типу</li>
+        <li>По рейтингу</li>
+      </ul>
+    </div>
+
+  </section>
+
+
   <section> <!--Выделяю в отдельный блок по смыслу, чтобы добавить скрытый заголовок, нужно или излишне?-->
     <h2>Список отелей</h2>
     <ul class="hotels-list">
