--- a/hotels.html
+++ b/hotels.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <title>Поиск отелей в Седоне</title>
 </head>
-<body class="page">
+<body>
   <header class="page-header">
     <nav>
       <a class="logo" href="index.html">
@@ -81,32 +81,40 @@
           </section>
         </li>
         <li class="hotel-item">
-          <div>
-            <img src="img/hotel-desert.jpg" alt="Мотель Desert Quail Inn" width="135" height="90">
+          <img src="img/hotel-desert.jpg" alt="Мотель Desert Quail Inn" width="135" height="90">
+          <section class="hotel-info">
             <h3 class="hotel-name">Desert Quail Inn</h3>
-            <span class="hotel-type">Мотель</span>
-            <span class="price">от 3000 руб.</span>
-            <div class="button-more">Подробнее</div>
-            <div class="book">Забронировать</div>
-          </div>
-          <div class="hotel-rating">
+            <div class="left-column">
+              <span class="hotel-type">Мотель</span>
+              <div class="button-more">Подробнее</div>
+            </div>
+            <div class="right-column">
+              <span class="price">от 3000 руб.</span>
+              <div class="book">Забронировать</div>
+            </div>
+          </section>
+          <section class="hotel-rating">
             <div class="star-rating"></div>
             <div class="numeric-rating">Рейтинг: 8,9</div>
-          </div>
+          </section>
         </li>
         <li class="hotel-item">
-          <div>
-            <img src="img/hotel-villas.jpg" alt="Апартаменты Villas At Poco Diablo" width="135" height="90">
+          <img src="img/hotel-villas.jpg" alt="Апартаменты Villas At Poco Diablo" width="135" height="90">
+          <section class="hotel-info">
             <h3 class="hotel-name">Villas At Poco Diablo</h3>
-            <span class="hotel-type">Апартаменты</span>
-            <span class="price">от 2000 руб.</span>
-            <div class="button-more">Подробнее</div>
-            <div class="book">Забронировать</div>
-          </div>
-          <div class="hotel-rating">
+            <div class="left-column">
+              <span class="hotel-type">Апартаменты</span>
+              <div class="button-more">Подробнее</div>
+            </div>
+            <div class="right-column">
+              <span class="price">от 2000 руб.</span>
+              <div class="book">Забронировать</div>
+            </div>
+          </section>
+          <section class="hotel-rating">
             <div class="star-rating"></div>
             <div class="numeric-rating">Рейтинг: 9,2</div>
-          </div>
+          </section>
         </li>
       </ul>
     </section>
@@ -114,7 +122,7 @@
   <footer class="page-footer">
     <p class="contacts">
       #VisitSedona
-      ТЕЛ: +7(495) 666-02-66
+      ТЕЛ: <a href="tel:+74956660266">+7(495) 666-02-66</a>
     </p>
     <ul class="social-list">
       <li class="social-item">
