--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8">
   <title>Добро пожаловать в Седону!</title>
 </head>
-<body class="page">
+<body>
   <header class="page-header">
     <nav>
       <a class="logo">
@@ -128,7 +128,7 @@
   <footer class="page-footer">
     <p class="contacts">
       #VisitSedona
-      ТЕЛ: +7(495) 666-02-66
+      ТЕЛ: <a href="tel:+74956660266">+7(495) 666-02-66</a>
     </p>
     <ul class="social-list">
       <li class="social-item">
