--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="ru" class="page">
+<html lang="ru">
 <head>
   <meta charset="utf-8">
   <title>Добро пожаловать в Седону!</title>
@@ -41,7 +41,7 @@
       <ol class="reasons-list">
         <li class="main-reason">
           <div class="reason-info">
-            <h3 class="reasons-item-title">Настоящий городок</h3>
+            <h3 class="reasons-item-title">Настоящий<br> городок</h3>
             <p class="reason-number">— №1 —</p>
             <p class="reasons-text-content">
               Седона - не аттракцион для туристов, там течёт своя жизнь
@@ -75,9 +75,9 @@
         </li>
         <li class="main-reason reverse">
           <div class="reason-info">
-            <h3 class="reasons-item-header">Там есть Мост дьявола</h3>
+            <h3 class="reasons-item-title">Там есть <br>Мост дьявола</h3>
             <p class="reason-number">— №2 —</p>
-            <p class="text-content">
+            <p class="reasons-text-content">
               Да, по нему можно пройти! Если конечно вы осмелитесь
             </p>
           </div>
@@ -86,33 +86,33 @@
           </div>
         </li>
         <li class="background-gray reason-info">
-          <h3 class="reasons-item-header">Небольшая площадь</h3>
+          <h3 class="reasons-item-title">Небольшая <br>площадь</h3>
           <p class="reason-number">— №3 —</p>
-          <p class="text-content">
+          <p class="reasons-text-content">
             Все достопримечательности находятся очень близко
           </p>
         </li>
         <li class="background-gray reason-info">
-          <h3 class="reasons-item-header">Красивая дорога</h3>
+          <h3 class="reasons-item-title">Красивая <br>дорога</h3>
           <p class="reason-number">— №4 —</p>
-          <p class="text-content">
+          <p class="reasons-text-content">
             Ехать в седону из Лас-Вегаса совсем не скучно!
           </p>
         </li>
         <li class="background-gray reason-info">
-          <h3 class="reasons-item-header">Мало туристов</h3>
+          <h3 class="reasons-item-title">Мало <br>туристов</h3>
           <p class="reason-number">— №5 —</p>
-          <p class="text-content">
-            Большинство едет в гранд каньон и толпится там
+          <p class="reasons-text-content">
+            Большинство едет в гранд каньон <br>и толпится там
           </p>
         </li>
       </ol>
     </section>
-    <section class="hotels-search">
+    <section class="hotels-search-section">
       <div class="hotels-search-content">
         <h2 class="hotels-search-title">Заинтересовались?</h2>
         <p class="hotels-search-text">
-          Укажите предполагаемые даты поездки, и мы покажем вам лучшие предложения гостиниц в Cедоне
+          Укажите предполагаемые даты поездки, <br>и мы покажем вам лучшие предложения гостиниц в Cедоне
         </p>
       </div>
       <button type="button" class="hotels-search">Поиск гостиницы в Седоне</button>
@@ -135,15 +135,15 @@
           <div class="visitors-counter">
             <p class="visitors">
               <label for="adults">Взрослые:</label>
-              <button type="button" class="minus"></button>
+              <button type="button" class="operator minus"></button>
               <input id="adults" type="text" name="adults" value="2" class="adults visitors-input">
-              <button type="button" class="plus"></button>
+              <button type="button" class="operator plus"></button>
             </p>
             <p class="visitors">
               <label for="children" class="children">Дети:</label>
-              <button type="button" class="minus"></button>
+              <button type="button" class="operator minus"></button>
               <input id="children" type="text" name="children" value="0" class="visitors-input">
-              <button type="button" class="plus"></button>
+              <button type="button" class="operator plus"></button>
             </p>
           </div>
           <button type="submit" class="search">Найти</button>
