--- a/hotels.html
+++ b/hotels.html
@@ -25,7 +25,7 @@
     <h1 class="visually-hidden">Выбрать подходящий отель в Седоне</h1>
     <section class="filer">
       <h2 class="visually-hidden">Фильтр отелей</h2>
-      <form action="https://echo.htmlacademy.ru" method="get" oninput="sumoutput.value=suminput.value" class="hotels-filter-form">
+      <form action="https://echo.htmlacademy.ru" method="get" class="hotels-filter-form">
         <div class="left-col-filters">
           <fieldset>
           <legend>Инфраструктура:</legend>
@@ -39,7 +39,7 @@
               <label for="filter-parking">Парковка</label>
             </li>
             <li class="filer-option">
-              <input type="checkbox" name="wifi" id="filter-wifi" class="visually-hidden filter-input-checkbox">
+              <input type="checkbox" name="wifi" id="filter-wifi" class="visually-hidden filter-input-checkbox" disabled>
               <label for="filter-wifi">Wi-fi</label>
             </li>
           </ul>
@@ -99,7 +99,7 @@
           <h4 class="param-sorting-title">Сортировка:</h4>
           <ul class="param-sorting-list">
             <li>
-              <button type="submit" class="param">По цене</button>
+              <button type="submit" class="param active">По цене</button>
             </li>
             <li>
               <button type="submit" class="param">По типу</button>
@@ -113,12 +113,12 @@
           <ul class="ranking-list">
           <li>
             <button type="submit" class="ranking" aria-label="По возрастанию">
-              <svg xmlns="http://www.w3.org/2000/svg" width="11" height="10" viewBox="0 0 11 10"><path class="arrow up" fill="#231F20" d="M5.5 0L0 10h11z"/></svg>
+              <svg xmlns="http://www.w3.org/2000/svg" width="11" height="10" viewBox="0 0 11 10" fill="#CACACA"><path d="M5.5 0L0 10h11z"/></svg>
             </button>
           </li>
           <li>
-            <button type="submit" class="ranking" aria-label="По убыванию">
-              <svg xmlns="http://www.w3.org/2000/svg" width="11" height="10" viewBox="0 0 11 10"><path class="arrow down" fill="#231F20" d="M5.5 10L0 0h11"/></svg>
+            <button type="submit" class="ranking active" aria-label="По убыванию">
+              <svg xmlns="http://www.w3.org/2000/svg" width="11" height="10" viewBox="0 0 11 10" fill="#CACACA"><path d="M5.5 10L0 0h11"/></svg>
             </button>
           </li>
         </ul>
@@ -128,7 +128,7 @@
         <li class="hotels-item">
           <img src="img/hotel-amara.jpg" alt="Отель Amara resort & Spa" width="135" height="90">
           <section class="hotel-info">
-            <h3 class="hotel-name">Amara resort & Spa</h3>
+            <a href="#" class="hotel-name"><h3>Amara resort & Spa</h3></a>
             <div class="hotel-info-columns">
               <div class="left-column">
                 <span class="hotel-type">Гостиница</span>
@@ -148,7 +148,7 @@
         <li class="hotels-item">
           <img src="img/hotel-desert.jpg" alt="Мотель Desert Quail Inn" width="135" height="90">
           <section class="hotel-info">
-            <h3 class="hotel-name">Desert Quail Inn</h3>
+            <a href="#" class="hotel-name"><h3>Desert Quail Inn</h3></a>
             <div class="hotel-info-columns">
             <div class="left-column">
               <span class="hotel-type">Мотель</span>
@@ -168,7 +168,7 @@
         <li class="hotels-item">
           <img src="img/hotel-villas.jpg" alt="Апартаменты Villas At Poco Diablo" width="135" height="90">
           <section class="hotel-info">
-            <h3 class="hotel-name">Villas At Poco Diablo</h3>
+            <a href="#" class="hotel-name"><h3>Villas At Poco Diablo</h3></a>
             <div class="hotel-info-columns">
             <div class="left-column">
               <span class="hotel-type">Апартаменты</span>
