--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
   <meta charset="utf-8">
   <title>Добро пожаловать в Седону!</title>
   <link href="https://fonts.googleapis.com/css2?family=PT+Sans:wght@400;700&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="css/normalize.css">
-  <link rel="stylesheet" href="css/style.css">
+  <link rel="stylesheet" href="css/normalize-min.css">
+  <link rel="stylesheet" href="css/style-min.css">
 </head>
 <body class="page-body">
 <div class="page-wrap">
@@ -15,8 +15,8 @@
         <img src="img/logo-sedona.svg" alt="Логотип сайта" width="138" height="70">
       </a>
       <ul class="site-navigation">
-        <li class="align-left"><a href="#">Информация</a></li>
-        <li class="align-left"><a href="#">Фото и видео</a></li>
+        <li><a href="#">Информация</a></li>
+        <li><a href="#">Фото и видео</a></li>
         <li class="align-right"><a href="#">Карта штата</a></li>
         <li class="align-right"><a href="hotels.html">Гостиницы</a></li>
       </ul>
@@ -154,7 +154,8 @@
       </div>
     </section>
     <section class="map map-position">
-      <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d234819.29532541992!2d-111.88868464197978!3d34.89524956279639!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x872da132f942b00d%3A0x5548c523fa6c8efd!2z0KHQtdC00L7QvdCwLCDQkNGA0LjQt9C-0L3QsCA4NjMzNiwg0KHQqNCQ!5e0!3m2!1sru!2sru!4v1592412478163!5m2!1sru!2sru" width="1200" height="593" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
+      <h2 class="visually-hidden">Карта Седоны</h2>
+      <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d234819.29532541992!2d-111.88868464197978!3d34.89524956279639!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x872da132f942b00d%3A0x5548c523fa6c8efd!2z0KHQtdC00L7QvdCwLCDQkNGA0LjQt9C-0L3QsCA4NjMzNiwg0KHQqNCQ!5e0!3m2!1sru!2sru!4v1592412478163!5m2!1sru!2sru" width="1200" height="593" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
       <img src="img/map.png" alt="Седона на карте" width="1199" height="593">
     </section>
   </main>
@@ -182,6 +183,6 @@
     </p>
   </footer>
 </div>
-<script src="js/search-form.js"></script>
+<script src="js/search-form-min.js"></script>
 </body>
 </html>
