--- a/hotels.html
+++ b/hotels.html
@@ -16,8 +16,8 @@
       </a>
       <ul class="site-navigation">
         <li><a href="#">Информация</a></li>
-        <li><a href="#">Фото и видео</a></li>
-        <li class="align-right"><a href="#">Карта штата</a></li>
+        <li><a href="#" class="inner-left">Фото и видео</a></li>
+        <li class="align-right"><a href="#" class="inner-right">Карта штата</a></li>
         <li class="align-right"><a class="current">Гостиницы</a></li>
       </ul>
     </nav>
